--- a/templates/index.html
+++ b/templates/index.html
@@ -130,6 +130,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                       <li><a href="/view_price_range.html">价格分布</a></li>
                         <li><a href="/view_all_cb.html">全市场可转债分布</a></li>
                         <li><a href="/view_cb_wordcloud.html">可转债概念分析</a></li>
+                        <li><a href="/view_hot_wordcloud.html">可转债热度分析</a></li>
                       <li><a href="/view_up_down.html">涨跌排行</a></li>
                         <li><a href="/view_discount.html">溢价率折价排行</a></li>
                         <li><a href="/view_stock.html">正股涨幅排行</a></li>
