--- a/templates/page_with_navbar.html
+++ b/templates/page_with_navbar.html
@@ -16,8 +16,8 @@
         <script type="text/javascript" src="/static/js/bootsnav.js"></script>
         <script type="text/javascript" src="/static/js/popwin.js"></script>
 
-        <script type="text/javascript" src="/static/js/echarts.min.js"></script>
-        <script type="text/javascript" src="/static/js/echarts-wordcloud.js"></script>
+        <script type="text/javascript" src="/static/js/echarts.min.4.8.0.js"></script>
+        <script type="text/javascript" src="/static/js/echarts-wordcloud.min.1.1.2.js"></script>
 
         <title>{{ title }}</title>
         <style>
