--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>可转债投资助手</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon"  href="/static/img/favicon.ico">
-<!--  <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>-->
+    <title>可转债投资助手</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon"  href="/static/img/favicon.ico">
 
-	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-	<!--<link rel="stylesheet" type="text/css" href="https://www.jq22.com/jquery/font-awesome.4.6.0.css">-->
-	<link rel="stylesheet" type="text/css" href="/static/css/bootsnav.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootsnav.css">
 
-	<script src="/static/js/jquery.min.js"></script>
-	<script src="/static/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="/static/js/bootsnav.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
     <script>
         var _hmt = _hmt || [];
@@ -28,70 +25,6 @@
 <style>
 html,body {height: 100%;}
 
-.navbar-brand{
-    padding: 29px 15px;
-    height: auto;
-}
-nav.navbar.bootsnav{
-    border: none;
-    margin-bottom: 150px;
-}
-.navbar-nav{
-    float: left;
-}
-nav.navbar.bootsnav ul.nav > li > a{
-    color: #474747;
-    text-transform: uppercase;
-    padding: 30px;
-}
-nav.navbar.bootsnav ul.nav > li:hover{
-    background: #f4f4f4;
-}
-.nav > li:after{
-    content: "";
-    width: 0;
-    height: 5px;
-    background: #34c9dd;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transition: all 0.5s ease 0s;
-}
-.nav > li:hover:after{
-    width: 100%;
-}
-nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after{
-    content: "+";
-    font-family: 'FontAwesome';
-    font-size: 16px;
-    font-weight: 500;
-    position: absolute;
-    top: 35%;
-    right: 10%;
-    transition: all 0.4s ease 0s;
-}
-nav.navbar.bootsnav ul.nav > li.dropdown.on > a.dropdown-toggle:after{
-    content: "\f105";
-    transform: rotate(90deg);
-}
-.dropdown-menu.multi-dropdown{
-    position: absolute;
-    left: -100% !important;
-}
-nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    border: none;
-}
-@media only screen and (max-width:990px){
-    nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after,
-    nav.navbar.bootsnav ul.nav > li.dropdown.on > a.dropdown-toggle:after{ content: " "; }
-    .dropdown-menu.multi-dropdown{ left: 0 !important; }
-    nav.navbar.bootsnav ul.nav > li:hover{ background: transparent; }
-    nav.navbar.bootsnav ul.nav > li > a{ margin: 0; }
-}
-
-
-
 .home_banner { background: url(/static/img/bgm.jpg) top center no-repeat; background-size: cover; }
 
 .form-signin {width: 100%;max-width: 330px;padding: 15px;margin: 0 auto;}
@@ -104,100 +37,106 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
 </style>
 <body class=" home_banner">
 
-    <nav class="navbar navbar-default navbar-mobile bootsnav">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                <i class="fa fa-bars"></i>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-menu">
-            <ul class="nav navbar-nav" data-in="fadeInDown" data-out="fadeOutUp">
-                <li><a href="/">Home</a></li>
-                <li><a href="/view_market.html">可转债策略</a></li>
-                <li><a href="/view_strategy_group.html">可转债轮动</a></li>
-                <li><a href="/view_enforce_list.html">可转债强赎</a></li>
-                <li><a href="/view_trend.html">可转债估值</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">可转债分析</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/view_tree_map_industry.html">行业涨跌分布</a></li>
-                      <li><a href="/view_industry_premium.html">行业溢价率分布</a></li>
-                      <li><a href="/view_industry_double_low.html">行业双低值分布</a></li>
-                      <li><a href="/view_tree_map_price.html">涨跌价格分布</a></li>
-                      <li><a href="/view_tree_map_remain.html">涨跌余额分布</a></li>
-                      <li><a href="/view_tree_map_premium.html">涨跌溢价率分布</a></li>
-                      <li><a href="/view_up_down_range.html">涨跌幅分布</a></li>
-                      <li><a href="/view_price_range.html">价格分布</a></li>
-                        <li><a href="/view_all_cb.html">全市场可转债分布</a></li>
-                        <li><a href="/view_cb_wordcloud.html">可转债概念分析</a></li>
-                        <li><a href="/view_hot_wordcloud.html">可转债热度分析</a></li>
-                      <li><a href="/view_up_down.html">涨跌排行</a></li>
-                        <li><a href="/view_discount.html">溢价率折价排行</a></li>
-                        <li><a href="/view_stock.html">正股涨幅排行</a></li>
-                      <li><a href="/view_turnover.html">换手率排行</a></li>
-                    </ul>
-                </li>
-                <li><a href="#" onclick="process_wrapper('/realtime_update_data.html');return false">实时刷新</a></li>
+<nav class="navbar navbar-default" role="navigation">
+	<div class="container-fluid">
+	<div class="navbar-header">
+	</div>
+	<div>
+		<ul class="nav navbar-nav">
+			<li><a href="/view_market.html">可转债策略</a></li>
+			<li><a href="/view_strategy_group.html">可转债轮动</a></li>
+			<li><a href="/view_enforce_list.html">可转债强赎</a></li>
+			<li><a href="/view_trend.html">可转债估值</a></li>
+            <li><a href="#" onclick="process_wrapper('/realtime_update_data.html');return false">实时刷新</a></li>
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        可转债分析
+					<b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+                    <li><a href="/view_tree_map_industry.html">行业涨跌分布</a></li>
+                    <li><a href="/view_industry_premium.html">行业溢价率分布</a></li>
+                    <li><a href="/view_industry_double_low.html">行业双低值分布</a></li>
+					<li class="divider"></li>
+                    <li><a href="/view_tree_map_price.html">涨跌价格分布</a></li>
+                    <li><a href="/view_tree_map_remain.html">涨跌余额分布</a></li>
+                    <li><a href="/view_tree_map_premium.html">涨跌溢价率分布</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/view_up_down_range.html">涨跌幅分布</a></li>
+                    <li><a href="/view_price_range.html">价格分布</a></li>
+                    <li><a href="/view_all_cb.html">全市场可转债分布</a></li>
+					<li class="divider"></li>
+                    <li><a href="/view_cb_wordcloud.html">可转债概念分析</a></li>
+                    <li><a href="/view_hot_wordcloud.html">可转债热度分析</a></li>
+					<li class="divider"></li>
+                    <li><a href="/view_up_down.html">涨跌排行</a></li>
+                    <li><a href="/view_discount.html">溢价率折价排行</a></li>
+                    <li><a href="/view_stock.html">正股涨幅排行</a></li>
+                    <li><a href="/view_turnover.html">换手率排行</a></li>
+				</ul>
+			</li>
+            {% if current_user and current_user.is_authenticated %}
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">我的自选
 
-                {% if current_user and current_user.is_authenticated %}
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">我的自选</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/view_my_select.html">自选列表</a></li>
-                      <li><a href="/edit_changed_bond_select.html">添加自选</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">我的持仓</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/view_my_strategy.html">按策略统计</a></li>
-                      <li><a href="/view_my_account.html">按账户统计</a></li>
-                        <li><a href="/new_sync_trade_data.html">同步交易数据</a></li>
-<!--                        <li><a href="/edit_hold_bond.html">更新持仓数据</a></li>-->
-                        <li><a href="/view_my_up_down.html">可转债涨跌排行</a></li>
-                        <li><a href="/view_my_price_list.html">可转债价格排行</a></li>
-                        <li><a href="/view_my_yield.html">我的收益率</a></li>
-                        <li><a href="/view_my_trade_history.html">我的成交记录</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">系统管理</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#" onclick="process_wrapper('/update_data_before_trade_is_start.html');return false">开盘前更新数据</a></li>
-                        <li><a href="#" onclick="process_wrapper('/update_data_after_trade_is_end.html');return false">收盘后更新数据</a></li>
-                        <li><a href="#" onclick="process_wrapper('/cb_ninwen.html');return false">更新所有可转债数据</a></li>
-                        <li><a href="#" onclick="process_task('更新可转债条款明细', '/cb_ninwen_detail.html/update_terms/');return false">更新可转债条款明细</a></li>
-                        <li><a href="#" onclick="process_task('更新诊断信息', '/stock_10jqka.html/update_diagnostic/');return false">同步同花顺正股诊断数据</a></li>
-                        <li><a href="#" onclick="process_task('更新正股信息', '/update_stock_key_info_from_eastmoney.html/update_stock/');return false">同步东财正股关键指标</a></li>
-                        <li><a href="#" onclick="process_task('更新概念信息', '/update_stock_theme_from_eastmoney.html/update_theme/');return false">同步东财正股概念信息</a></li>
-                        <li><a href="#" onclick="process_task('更新财报信息', '/stock_xueqiu.html/update_stock_report/');return false">同步雪球正股财报指标</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">导入导出&nbsp;&nbsp;▸</a>
-                            <ul class="dropdown-menu">
-                              <li><a href="/upload_db_data.html">数据导入</a></li>
-                              <li><a href="/download_db_data.html">数据导出</a></li>
-                            </ul>
-                        </li>
+					<b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+					<li><a href="/view_my_select.html">自选列表</a></li>
+                    <li><a href="/edit_changed_bond_select.html">添加自选</a></li>
+				</ul>
+			</li>
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">我的持仓
 
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">数据库操作&nbsp;&nbsp;▸</a>
-                            <ul class="dropdown-menu">
-                              <li><a href="/update_database.html">修改数据</a></li>
-                              <li><a href="/query_database.html">查询数据</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
+					<b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+                    <li><a href="/view_my_strategy.html">按策略统计</a></li>
+                    <li><a href="/view_my_account.html">按账户统计</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/new_sync_trade_data.html">同步交易数据</a></li>
+                    <!--                        <li><a href="/edit_hold_bond.html">更新持仓数据</a></li>-->
+                    <li class="divider"></li>
+                    <li><a href="/view_my_up_down.html">可转债涨跌排行</a></li>
+                    <li><a href="/view_my_price_list.html">可转债价格排行</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/view_my_yield.html">我的收益率</a></li>
+                    <li><a href="/view_my_trade_history.html">我的成交记录</a></li>
+				</ul>
+			</li>
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">系统管理
 
-
-                <li><a href="/logout.html">退&nbsp;&nbsp;&nbsp;&nbsp;出</a></li>
-                {% else %}
-                <li><a href="/sign.html">登&nbsp;&nbsp;&nbsp;&nbsp;录</a></li>
-                {% endif %}
-
-            </ul>
-        </div>
-    </nav>
+					<b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+                    <li><a href="#" onclick="process_wrapper('/update_data_before_trade_is_start.html');return false">开盘前更新数据</a></li>
+                    <li><a href="#" onclick="process_wrapper('/update_data_after_trade_is_end.html');return false">收盘后更新数据</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#" onclick="process_wrapper('/cb_ninwen.html');return false">更新所有可转债数据</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#" onclick="process_task('更新可转债条款明细', '/cb_ninwen_detail.html/update_terms/');return false">更新可转债条款明细</a></li>
+                    <li><a href="#" onclick="process_task('更新诊断信息', '/stock_10jqka.html/update_diagnostic/');return false">同步同花顺正股诊断数据</a></li>
+                    <li><a href="#" onclick="process_task('更新正股信息', '/update_stock_key_info_from_eastmoney.html/update_stock/');return false">同步东财正股关键指标</a></li>
+                    <li><a href="#" onclick="process_task('更新概念信息', '/update_stock_theme_from_eastmoney.html/update_theme/');return false">同步东财正股概念信息</a></li>
+                    <li><a href="#" onclick="process_task('更新财报信息', '/stock_xueqiu.html/update_stock_report/');return false">同步雪球正股财报指标</a></li>
+					<li class="divider"></li>
+                    <li><a href="/upload_db_data.html">数据导入</a></li>
+                    <li><a href="/download_db_data.html">数据导出</a></li>
+					<li class="divider"></li>
+                    <li><a href="/update_database.html">修改数据</a></li>
+                    <li><a href="/query_database.html">查询数据</a></li>
+				</ul>
+			</li>
+            <li><a href="/logout.html">退&nbsp;&nbsp;&nbsp;&nbsp;出</a></li>
+            {% else %}
+            <li><a href="/sign.html">登&nbsp;&nbsp;&nbsp;&nbsp;录</a></li>
+            {% endif %}
+		</ul>
+	</div>
+	</div>
+</nav>
 {% if current_user is undefined or not current_user.is_authenticated and sign%}
     <main role="main">
         <form class="form-signin" action="/login.html" method="post" style="color: white">
