--- a/templates/index.html
+++ b/templates/index.html
@@ -43,11 +43,11 @@ html,body {height: 100%;}
 	</div>
 	<div>
 		<ul class="nav navbar-nav">
-			<li><a href="/view_market.html">可转债策略</a></li>
-			<li><a href="/view_strategy_group.html">可转债轮动</a></li>
-			<li><a href="/view_enforce_list.html">可转债强赎</a></li>
-			<li><a href="/view_trend.html">可转债估值</a></li>
             <li><a href="#" onclick="process_wrapper('/realtime_update_data.html');return false">实时刷新</a></li>
+            <li><a href="/view_market.html">可转债策略</a></li>
+            <li><a href="/view_strategy_group.html">可转债轮动</a></li>
+            <li><a href="/view_enforce_list.html">可转债强赎</a></li>
+            <li><a href="/view_trend.html">可转债估值</a></li>
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         可转债分析
@@ -55,7 +55,7 @@ html,body {height: 100%;}
 				</a>
 				<ul class="dropdown-menu">
                     <li><a href="/view_tree_map_industry.html">行业涨跌分布</a></li>
-                    <li><a href="/view_industry_premium.html">行业溢价率分布</a></li>
+                    <li><a href="/view_industry_premium.html">行业价格&溢价率分布</a></li>
                     <li><a href="/view_industry_double_low.html">行业双低值分布</a></li>
 					<li class="divider"></li>
                     <li><a href="/view_tree_map_price.html">涨跌价格分布</a></li>
