--- a/templates/upload_db_data.html
+++ b/templates/upload_db_data.html
@@ -108,7 +108,7 @@
         <br/>
         <br/>
         <div class="container">
-            <form class="needs-validation" novalidate action="/save_db_data.html" method="post" enctype="multipart/form-data">
+            <form class="needs-validation" novalidate action="{{ save_data_url }}" method="post" enctype="multipart/form-data">
 
                 <div class="form-group">
                     <label for="inputfile">更新数据文件</label>
