--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,29 @@ html,body {height: 100%;}
             <li><a href="#" onclick="process_wrapper('/realtime_update_data.html');return false">实时刷新</a></li>
             <li><a href="/view_market.html">可转债策略</a></li>
             <li><a href="/view_strategy_group.html">可转债轮动</a></li>
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        可转债回测
+					<b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+                    {% if current_user and current_user.is_authenticated %}
+                    <li><a href="/view_custom_back_test.html">定制化回测</a></li>
+					<li class="divider"></li>
+                    {% endif %}
+                    <li><a href="/view_good_year_back_test.html">行情好时的回测</a></li>
+                    <li><a href="/view_bad_year_back_test.html">行情差时的回测</a></li>
+                    <li><a href="/view_long_year_back_test.html">长周期下的回测</a></li>
+					<li class="divider"></li>
+                    <li><a href="/view_back_test_1.html">低溢价策略的回测</a></li>
+                    <li><a href="/view_back_test_2.html">低余额+低溢价+双低策略的回测</a></li>
+                    <li><a href="/view_back_test_3.html">低余额+双低策略的回测</a></li>
+                    <li><a href="/view_back_test_4.html">低溢价+双低策略的回测</a></li>
+                    <li><a href="/view_back_test_5.html">双低策略的回测</a></li>
+                    <li><a href="/view_back_test_6.html">高溢价策略的回测</a></li>
+                    <li><a href="/view_back_test_7.html">低价格策略的回测</a></li>
+				</ul>
+			</li>
             <li><a href="/view_enforce_list.html">可转债强赎</a></li>
             <li><a href="/view_trend.html">可转债估值</a></li>
 			<li class="dropdown">
@@ -124,6 +147,9 @@ html,body {height: 100%;}
 					<li class="divider"></li>
                     <li><a href="/upload_db_data.html">数据导入</a></li>
                     <li><a href="/download_db_data.html">数据导出</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/upload_cb_daily_data.html">历史数据导入</a></li>
+                    <li><a href="/download_cb_daily_data.html">历史数据导出</a></li>
 					<li class="divider"></li>
                     <li><a href="/update_database.html">修改数据</a></li>
                     <li><a href="/query_database.html">查询数据</a></li>
