--- a/templates/page_with_navbar.html
+++ b/templates/page_with_navbar.html
@@ -1,275 +1,212 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
 
-        <link rel="icon" href="/static/img/favicon.ico">
+    <link rel="icon" href="/static/img/favicon.ico">
 
-        <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-        <!--<link rel="stylesheet" type="text/css" href="https://www.jq22.com/jquery/font-awesome.4.6.0.css">-->
-        <link rel="stylesheet" type="text/css" href="/static/css/bootsnav.css">
-
-
-        <script src="/static/js/jquery.min.js"></script>
-        <script src="/static/js/bootstrap.min.js"></script>
-        <script src="/static/js/jquery.bootstrap-autohidingnavbar.min.js"></script>
-
-        <script type="text/javascript" src="/static/js/bootsnav.js"></script>
-        <script type="text/javascript" src="/static/js/popwin.js"></script>
-
-        <script type="text/javascript" src="/static/js/echarts.min.4.8.0.js"></script>
-        <script type="text/javascript" src="/static/js/echarts-wordcloud.min.1.1.2.js"></script>
-
-        <title>{{ title }}</title>
-        <style>
-            html,body {height: 100%;}
-
-            .navbar-brand{
-                padding: 29px 15px;
-                height: auto;
-            }
-            div.navbar.bootsnav{
-                background-color: #f8f8f8;
-                border-color: #e7e7e7;
-                margin-bottom: 10px;
-            }
-            .navbar-nav{
-                float: left;
-            }
-            div.navbar.bootsnav ul.nav > li > a{
-                color: #474747;
-                text-transform: uppercase;
-                padding: 20px;
-            }
-            div.navbar.bootsnav ul.nav > li:hover{
-                background: #f4f4f4;
-            }
-            .nav > li:after{
-                content: "";
-                width: 0;
-                height: 5px;
-                background: #34c9dd;
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                transition: all 0.5s ease 0s;
-            }
-            .nav > li:hover:after{
-                width: 100%;
-            }
-            div.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after{
-                content: "+";
-                font-family: 'FontAwesome';
-                font-size: 16px;
-                font-weight: 500;
-                position: absolute;
-                top: 35%;
-                right: 10%;
-                transition: all 0.4s ease 0s;
-            }
-            div.navbar.bootsnav ul.nav > li.dropdown.on > a.dropdown-toggle:after{
-                content: "\f105";
-                transform: rotate(90deg);
-            }
-            .dropdown-menu.multi-dropdown{
-                position: absolute;
-                left: -100% !important;
-            }
-            div.navbar.bootsnav li.dropdown ul.dropdown-menu{
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-                border: none;
-            }
-            @media only screen and (max-width:990px){
-                div.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after,
-                div.navbar.bootsnav ul.nav > li.dropdown.on > a.dropdown-toggle:after{ content: " "; }
-                .dropdown-menu.multi-dropdown{ left: 0 !important; }
-                div.navbar.bootsnav ul.nav > li:hover{ background: transparent; }
-                div.navbar.bootsnav ul.nav > li > a{ margin: 0; }
-            }
-
-            table>tbody>tr:hover {
-                background-color: #a7ddd9;
-            }
-
-            td, th {
-              border-right :1px solid gray;
-              border-bottom :1px solid gray;
-
-              text-align:center;
-              width:100px;
-              height:50px;
-              box-sizing: border-box;
-              font-size:7px;
-            }
-
-            th {
-              background-color:lightblue;
-                border-top :1px solid gray;
-            }
-
-            .outer_table {
-              position: relative;
-                /*border: 1px solid;*/
-            }
-            .inner_table {
-              overflow-x: scroll;
-              overflow-y: scroll;
-              width: 1400px;
-              /*margin-left: 100px;*/
-              /*  border: 1px solid;*/
-            }
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootsnav.css">
 
 
-            table {
-              border-collapse:separate;
-              table-layout: fixed;
-              width: 100%; /* 固定寬度 */
-            }
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
-            td:first-child, th:first-child {
-              position:sticky;
-              left:0; /* 首行在左 */
-              z-index:10;
-              background-color:lightgray;
-              margin-left: -100px;
-              margin-top: -50px;
-              height: 50px;
-              width: 100px;
-                border-left :1px solid gray;
-            }
+    <script type="text/javascript" src="/static/js/bootsnav.js"></script>
+    <script type="text/javascript" src="/static/js/popwin.js"></script>
 
-            thead tr th {
-              position:sticky;
-              top:0; /* 第一列最上 */
-            }
+    <script type="text/javascript" src="/static/js/echarts.min.4.8.0.js"></script>
+    <script type="text/javascript" src="/static/js/echarts-wordcloud.min.1.1.2.js"></script>
 
-            th:first-child{
-              z-index:20;
-              background-color:lightblue;
-            }
+    <title>{{ title }}</title>
+    <style>
+        html, body {
+            height: 100%;
+        }
 
-            .site-link{
-                margin-bottom:2px;
-                margin-right:3px
-            }
+        table > tbody > tr:hover {
+            background-color: #a7ddd9;
+        }
 
-            .next-site-link{
-                margin-bottom:-1px;
-                margin-right:1px
-            }
+        td, th {
+            border-right: 1px solid gray;
+            border-bottom: 1px solid gray;
 
-            .remarked-up{
-                color:red
-            }
-            .remarked-down{
-                color:green
-            }
+            text-align: center;
+            width: 100px;
+            height: 50px;
+            box-sizing: border-box;
+            font-size: 7px;
+        }
 
-            div.x-goto-top {
-                display: none;
-                opacity: 0.9;
-                z-index: 999999;
-                position: fixed;
-                bottom: 100px;
-                right: 1%;
-                margin-left: 40px;
-                width: 38px;
-                height: 38px;
-                border-radius: 3px;
-                cursor: pointer;
-                background-color: #f5f5f5;
-                border: 1px solid #0593d3;
-            }
-            div.x-goto-top div.x-arrow {
-                position: absolute;
-                left: 6px;
-                top: -3px;
-                width: 0;
-                height: 0;
-                border: 13px solid transparent;
-                border-bottom-color: #0593d3;
-            }
-            div.x-goto-top div.x-stick {
-                position: absolute;
-                left: 15px;
-                top: 15px;
-                width: 8px;
-                height: 14px;
-                display: block;
-                border-radius: 1px;
-                background-color: #0593d3;
-            }
-        </style>
-        <script>
-             $(function() {
+        th {
+            background-color: lightblue;
+            border-top: 1px solid gray;
+        }
 
-                //返回顶部===>出现与消失
-                //当屏幕滚动，触生 scroll 事件
-                $(window).scroll(function() {
+        .outer_table {
+            position: relative;
+            /*border: 1px solid;*/
+        }
 
-                   var top1 = $(this).scrollTop();     //获取相对滚动条顶部的偏移
+        .inner_table {
+            overflow-x: scroll;
+            overflow-y: scroll;
+            width: 1400px;
+            /*margin-left: 100px;*/
+            /*  border: 1px solid;*/
+        }
 
-                   if (top1>200) {      //当偏移大于200px时让图标淡入（css设置为隐藏）
+
+        table {
+            border-collapse: separate;
+            table-layout: fixed;
+            width: 100%; /* 固定寬度 */
+        }
+
+        td:first-child, th:first-child {
+            position: sticky;
+            left: 0; /* 首行在左 */
+            z-index: 10;
+            background-color: lightgray;
+            margin-left: -100px;
+            margin-top: -50px;
+            height: 50px;
+            width: 100px;
+            border-left: 1px solid gray;
+        }
+
+        thead tr th {
+            position: sticky;
+            top: 0; /* 第一列最上 */
+        }
+
+        th:first-child {
+            z-index: 20;
+            background-color: lightblue;
+        }
+
+        .site-link {
+            margin-bottom: 2px;
+            margin-right: 3px
+        }
+
+        .next-site-link {
+            margin-bottom: -1px;
+            margin-right: 1px
+        }
+
+        .remarked-up {
+            color: red
+        }
+
+        .remarked-down {
+            color: green
+        }
+
+        div.x-goto-top {
+            display: none;
+            opacity: 0.9;
+            z-index: 999999;
+            position: fixed;
+            bottom: 100px;
+            right: 1%;
+            margin-left: 40px;
+            width: 38px;
+            height: 38px;
+            border-radius: 3px;
+            cursor: pointer;
+            background-color: #f5f5f5;
+            border: 1px solid #0593d3;
+        }
+
+        div.x-goto-top div.x-arrow {
+            position: absolute;
+            left: 6px;
+            top: -3px;
+            width: 0;
+            height: 0;
+            border: 13px solid transparent;
+            border-bottom-color: #0593d3;
+        }
+
+        div.x-goto-top div.x-stick {
+            position: absolute;
+            left: 15px;
+            top: 15px;
+            width: 8px;
+            height: 14px;
+            display: block;
+            border-radius: 1px;
+            background-color: #0593d3;
+        }
+    </style>
+    <script>
+        $(function () {
+
+            //返回顶部===>出现与消失
+            //当屏幕滚动，触生 scroll 事件
+            $(window).scroll(function () {
+
+                var top1 = $(this).scrollTop();     //获取相对滚动条顶部的偏移
+
+                if (top1 > 200) {      //当偏移大于200px时让图标淡入（css设置为隐藏）
 
                     $(".x-goto-top").stop().fadeIn();
 
-                   }else{
-                         //当偏移小于200px时让图标淡出
+                } else {
+                    //当偏移小于200px时让图标淡出
                     $(".x-goto-top").stop().fadeOut();
-                   }
-                });
+                }
+            });
 
-                //去往顶部
-                $(".x-goto-top").click(function(){
-                    $("body , html").animate({scrollTop:0},300);   //300是所用时间
-                });
+            //去往顶部
+            $(".x-goto-top").click(function () {
+                $("body , html").animate({scrollTop: 0}, 300);   //300是所用时间
+            });
 
-                $(".navbar-nav li").click(function() {
-                    // alert("ddd");
-                    $(this).siblings('li').removeClass('active');
+            $(".navbar-nav li").click(function () {
+                // alert("ddd");
+                $(this).siblings('li').removeClass('active');
 
-                    $(this).addClass('active');
-
-                });
+                $(this).addClass('active');
 
             });
 
-            var _hmt = _hmt || [];
-            (function() {
-              var hm = document.createElement("script");
-              hm.src = "https://hm.baidu.com/hm.js?93517dc33949af1d524002310033fb5b";
-              var s = document.getElementsByTagName("script")[0];
-              s.parentNode.insertBefore(hm, s);
-            })();
-        </script>
-    </head>
-    <body>
-        <div class="x-goto-top">
-            <div class="x-arrow"></div>
-            <div class="x-stick"></div>
-        </div>
-      <div class="navbar navbar-default navbar-fixed-top navbar-mobile bootsnav" id="top_navbar">
+        });
+
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?93517dc33949af1d524002310033fb5b";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+</head>
+<body>
+<div class="x-goto-top">
+    <div class="x-arrow"></div>
+    <div class="x-stick"></div>
+</div>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                <i class="fa fa-bars"></i>
-            </button>
         </div>
-        <div class="collapse navbar-collapse" id="navbar-menu">
-            <ul class="nav navbar-nav" data-in="fadeInDown" data-out="fadeOutUp">
+        <div>
+            <ul class="nav navbar-nav">
                 {% autoescape false %}
-                    {{ navbar }}
+                {{ navbar }}
                 {% endautoescape %}
             </ul>
         </div>
-      </div>
+    </div>
+</nav>
 
-      <div class="container" style="width:1500px">
-          {% autoescape false %}
-            {{ content }}
-          {% endautoescape %}
-     </div>
-     <script>
-        $("div.navbar-fixed-top").autoHidingNavbar();
-     </script>
+<div class="container" style="width:1500px">
+    {% autoescape false %}
+    {{ content }}
+    {% endautoescape %}
+</div>
 
-    </body>
+</body>
 </html>
