--- a/templates/update_database.html
+++ b/templates/update_database.html
@@ -2,85 +2,19 @@
     <head>
         <meta charset="UTF-8">
         <link rel="icon" href="/static/img/favicon.ico">
-        <script src="https://code.z01.com/v4/dist/js/popper.min.js"></script>
-        <link rel="stylesheet" href="https://code.z01.com/v4/dist/css/bootstrap.min.css" >
 
         <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-        <!--<link rel="stylesheet" type="text/css" href="https://www.jq22.com/jquery/font-awesome.4.6.0.css">-->
         <link rel="stylesheet" type="text/css" href="/static/css/bootsnav.css">
 
 
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
-        <script src="/static/js/jquery.bootstrap-autohidingnavbar.min.js"></script>
 
         <script type="text/javascript" src="/static/js/bootsnav.js"></script>
         <title>更新可转债数据库</title>
         <style>
             html,body {height: 100%;}
 
-            .navbar-brand{
-                padding: 29px 15px;
-                height: auto;
-            }
-            div.navbar.bootsnav{
-                background-color: #f8f8f8;
-                border-color: #e7e7e7;
-                margin-bottom: 10px;
-            }
-            .navbar-nav{
-                float: left;
-            }
-            div.navbar.bootsnav ul.nav > li > a{
-                color: #474747;
-                text-transform: uppercase;
-                padding: 20px;
-            }
-            div.navbar.bootsnav ul.nav > li:hover{
-                background: #f4f4f4;
-            }
-            .nav > li:after{
-                content: "";
-                width: 0;
-                height: 5px;
-                background: #34c9dd;
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                transition: all 0.5s ease 0s;
-            }
-            .nav > li:hover:after{
-                width: 100%;
-            }
-            div.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after{
-                content: "+";
-                font-family: 'FontAwesome';
-                font-size: 16px;
-                font-weight: 500;
-                position: absolute;
-                top: 35%;
-                right: 10%;
-                transition: all 0.4s ease 0s;
-            }
-            div.navbar.bootsnav ul.nav > li.dropdown.on > a.dropdown-toggle:after{
-                content: "\f105";
-                transform: rotate(90deg);
-            }
-            .dropdown-menu.multi-dropdown{
-                position: absolute;
-                left: -100% !important;
-            }
-            div.navbar.bootsnav li.dropdown ul.dropdown-menu{
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-                border: none;
-            }
-            @media only screen and (max-width:990px){
-                div.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after,
-                div.navbar.bootsnav ul.nav > li.dropdown.on > a.dropdown-toggle:after{ content: " "; }
-                .dropdown-menu.multi-dropdown{ left: 0 !important; }
-                div.navbar.bootsnav ul.nav > li:hover{ background: transparent; }
-                div.navbar.bootsnav ul.nav > li > a{ margin: 0; }
-            }
 
             .container {max-width: 700px;}
             .border-top { border-top: 1px solid #e5e5e5; }
@@ -91,18 +25,18 @@
         </style>
     </head>
     <body>
-      <div class="navbar navbar-default navbar-fixed-top navbar-mobile bootsnav" id="top_navbar">
+
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                <i class="fa fa-bars"></i>
-            </button>
         </div>
-        <div class="collapse navbar-collapse" id="navbar-menu">
-            <ul class="nav navbar-nav" data-in="fadeInDown" data-out="fadeOutUp">
+        <div>
+            <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
             </ul>
         </div>
-      </div>
+    </div>
+</nav>
         <br/>
         <br/>
         <br/>
