--- a/templates/custom_backtest.html
+++ b/templates/custom_backtest.html
@@ -75,7 +75,7 @@
                     <br>
                     <input type="checkbox" name="strategy_type" value="低溢价+双低策略">低溢价+双低策略&nbsp;&nbsp;&nbsp;&nbsp;
                     <input type="checkbox" name="strategy_type" value="双低策略">双低策略&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="checkbox" name="strategy_type" value="高溢价策略">高溢价策略&nbsp;&nbsp;&nbsp;&nbsp;
+                    <input type="checkbox" name="strategy_type" value="高收益率策略">高收益率策略&nbsp;&nbsp;&nbsp;&nbsp;
                     <input type="checkbox" name="strategy_type" value="低价格策略">低价格策略&nbsp;&nbsp;&nbsp;&nbsp;
                     <br>
                 </td>
