--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@ html,body {height: 100%;}
 		<ul class="nav navbar-nav">
             <li><a href="#" onclick="process_wrapper('/realtime_update_data.html');return false">实时刷新</a></li>
             <li><a href="/view_market.html">可转债策略</a></li>
-            <li><a href="/view_strategy_group.html">可转债轮动</a></li>
+            <li><a href="/view_strategy_group.html">可转债轮动(模拟盘)</a></li>
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         可转债回测
@@ -136,6 +136,8 @@ html,body {height: 100%;}
 				<ul class="dropdown-menu">
                     <li><a href="#" onclick="process_wrapper('/update_data_before_trade_is_start.html');return false">开盘前更新数据</a></li>
                     <li><a href="#" onclick="process_wrapper('/update_data_after_trade_is_end.html');return false">收盘后更新数据</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#" onclick="process_wrapper('/init_strategy_groups.html');return false">初始化轮动模拟盘</a></li>
                     <li class="divider"></li>
                     <li><a href="#" onclick="process_wrapper('/cb_ninwen.html');return false">更新所有可转债数据</a></li>
                     <li class="divider"></li>
