--- a/templates/index.html
+++ b/templates/index.html
@@ -54,22 +54,20 @@ html,body {height: 100%;}
 					<b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
-                    {% if current_user and current_user.is_authenticated %}
                     <li><a href="/view_custom_back_test.html">定制化回测</a></li>
 					<li class="divider"></li>
-                    {% endif %}
-                    <li><a href="/view_good_year_back_test.html">行情好时的回测</a></li>
-                    <li><a href="/view_bad_year_back_test.html">行情差时的回测</a></li>
-                    <li><a href="/view_long_year_back_test.html">长周期下的回测</a></li>
+                    <li><a href="/view_good_year_back_test.html">行情好时回测</a></li>
+                    <li><a href="/view_bad_year_back_test.html">行情差时回测</a></li>
+                    <li><a href="/view_long_year_back_test.html">长周期下回测</a></li>
 					<li class="divider"></li>
-                    <li><a href="/view_back_test_1.html">低溢价策略的回测</a></li>
-                    <li><a href="/view_back_test_2.html">低余额+低溢价+双低策略的回测</a></li>
-                    <li><a href="/view_back_test_3.html">低余额+双低策略的回测</a></li>
-                    <li><a href="/view_back_test_4.html">低溢价+双低策略的回测</a></li>
-                    <li><a href="/view_back_test_5.html">双低策略的回测</a></li>
-                    <li><a href="/view_back_test_8.html">三低策略的回测</a></li>
-                    <li><a href="/view_back_test_6.html">高溢价策略的回测</a></li>
-                    <li><a href="/view_back_test_7.html">低价格策略的回测</a></li>
+                    <li><a href="/view_back_test_1.html">低溢价策略回测</a></li>
+                    <li><a href="/view_back_test_2.html">低余额+低溢价+双低策略回测</a></li>
+                    <li><a href="/view_back_test_3.html">低余额+双低策略回测</a></li>
+                    <li><a href="/view_back_test_4.html">低溢价+双低策略回测</a></li>
+                    <li><a href="/view_back_test_5.html">双低策略回测</a></li>
+                    <li><a href="/view_back_test_8.html">三低策略回测</a></li>
+                    <li><a href="/view_back_test_6.html">高收益率策略回测</a></li>
+                    <li><a href="/view_back_test_7.html">低价格策略回测</a></li>
 				</ul>
 			</li>
             <li><a href="/view_enforce_list.html">可转债强赎</a></li>
