--- a/templates/index.html
+++ b/templates/index.html
@@ -137,9 +137,9 @@ html,body {height: 100%;}
 				<ul class="dropdown-menu">
                     <li><a href="#" onclick="process_wrapper('/update_data_before_trade_is_start.html');return false">开盘前更新数据</a></li>
                     <li><a href="#" onclick="process_wrapper('/update_data_after_trade_is_end.html');return false">收盘后更新数据</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#" onclick="process_wrapper('/init_strategy_groups.html');return false">初始化轮动</a></li>
-                    <li><a href="#" onclick="process_wrapper('/update_strategy_groups.html');return false">更新轮动数据</a></li>
+<!--                    <li class="divider"></li>-->
+<!--                    <li><a href="#" onclick="process_wrapper('/init_strategy_groups.html');return false">初始化轮动</a></li>-->
+<!--                    <li><a href="#" onclick="process_wrapper('/update_strategy_groups.html');return false">更新轮动数据</a></li>-->
                     <li class="divider"></li>
                     <li><a href="#" onclick="process_wrapper('/update_back_test_data.html');return false">更新回测数据</a></li>
                     <li class="divider"></li>
