--- a/templates/index.html
+++ b/templates/index.html
@@ -142,6 +142,7 @@ html,body {height: 100%;}
 <!--                    <li><a href="#" onclick="process_wrapper('/update_strategy_groups.html');return false">更新轮动数据</a></li>-->
                     <li class="divider"></li>
                     <li><a href="#" onclick="process_wrapper('/fetch_cb_history.html');return false">抓取可转债历史数据</a></li>
+                    <li><a href="#" onclick="process_wrapper('/fetch_cb_index_history.html');return false">更新可转债指数信息</a></li>
                     <li><a href="#" onclick="process_wrapper('/update_back_test_data.html');return false">更新回测数据</a></li>
                     <li class="divider"></li>
                     <li><a href="#" onclick="process_wrapper('/cb_ninwen.html');return false">更新所有可转债数据</a></li>
